<resources>
    <string name="app_name">Otp Example</string>
    <string name="otp_verification">otpVerification</string>
    <string name="we_will_send_you_an_one_time_password_on_ths_mobile_number">we will send you an one time password on ths mobile number</string>
    <string name="enter_the_mobile_number">enter the mobile number</string>
    <string name="_91">+91-</string>
    <string name="_1234567890">1234567890</string>
    <string name="get_otp">getOtp</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify">Verify</string>
</resources>