<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:scrollbars="none"
    android:overScrollMode="never"
    tools:context=".SendOTPActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:orientation="vertical">

    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/send"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/otp_verification"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/we_will_send_you_an_one_time_password_on_ths_mobile_number"
        android:textColor="@color/colorTextSecondary"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/enter_the_mobile_number"
        android:textColor="@color/colorTextSecondary"
        android:textSize="14sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:orientation="horizontal">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="40dp"
          android:gravity="center"
          android:text="@string/_91"
          android:textColor="@color/colorPrimary"
          android:textSize="16sp"
          android:textStyle="bold"/>

      <EditText
          android:layout_width="wrap_content"
          android:layout_height="40dp"
          android:id="@+id/inputMobile"
          android:background="@null"
          android:hint="@string/_1234567890"
          android:imeOptions="actionDone"
          android:importantForAutofill="no"
          android:inputType="number"
          android:textColor="@color/colorPrimary"
          android:textSize="16sp"
          android:textStyle="bold"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="70dp"
        android:background="@color/colorDivider"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


      <Button
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/buttonGetOTP"
          android:layout_margin="30dp"
          android:background="@drawable/background_button"
          android:text="@string/get_otp"
          android:textColor="@color/colorwhite"
          android:textSize="16sp"
          android:textStyle="bold"/>

      <ProgressBar
          android:layout_width="40dp"
          android:layout_height="40dp"
        android:id="@+id/progressbar"
        android:layout_gravity="center"
        android:visibility="gone"/>


    </FrameLayout>


  </LinearLayout>

</ScrollView>